<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">短信轰炸机</string>
    <string name="action_settings">Settings</string>
    <string name="phone_hint">某人的手机号码</string>
    <string name="times_hint">轰炸次数</string>
    <string name="button01">开始轰炸</string>
    <string name="success">发送成功</string>
    <string name="clear">归零</string>
    <string name="fireup">开始轰炸</string>
    <string name="main_title">冤冤相报何时了</string>
    <string name="single_bomb">本次轰炸</string>
    <string name="total_bomb">累计轰炸</string>
    <string name="bomb_num_unit">条</string>
    <string name="bomb_origin_value">0.00</string>
    <string name="phone_format_reminder">电话号码不足11位</string>
    <string name="request_overrun">不要急,请稍后再试</string>
    <string name="network_not_avaiable">网络异常,请检查</string>
    

</resources>